added a css color

--- a/index.html
+++ b/index.html
@@ -3,11 +3,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment</title>
+    <title>assignment</title>
     <link rel="stylesheet" href="stylish.css">
 </head>
 <body>
-    hello world
+    <nav>
+<img src="./assets/logo-navbar.png" alt="">
+<li><a href="">Feauteres</a></li>
+<li><a href="">How it works</a></li>
+<li><a href="">What it is Different</a></li>
+<button>Get Early Access</button>
+
+    </nav>
+
+<section class="banner">
+    <div class="early-btn">
+<p> Early access now open</p>
+</div>
+<h1>Struckter  thinking , <br>
+    Not just Note-Taking.
+</h1>
+<p>
+A private space to stores notes,likes, and learning summarise- designed to <br>
+help you think clearly ,connent ideas , and turn learning into long -term knowledge.
+</p>
+<button class="btn">Starting building your Vault</button>
+<button>See How it Works</button>
+
+</section>
+<section>
+
     
+    <div class="notes">
+<h1>Notes Don't Fail ,Structer Does
+</h1>
+<p>you are not at learning ,Your tools just waren't built for how knowledge actually works</p>
+</div>
+<div class="card-style">
+<div class="card">
+<img src="./assets/Vector.png" alt="">
+<h1>Scattered Notes</h1>
+<p>Your ideas live in 10 Different apps , <br>none of them connected .</p>
+</div>
+<div class="card">
+<img src="./assets/Bookmarks.png" alt="">
+<h1>Bookmark Overloded</h1>
+<p>Hundred of saved links you'll nevar <br>revisit or remember</p>
+</div>
+<div class="card">
+<img src="./assets/Brain.png" alt="">
+<h1>No idea connection</h1>
+<p>Insights stay isolated never <br>building into bigger understanding</p>
+</div>
+<div class="card">
+    <img src="./assets/Info.png" alt="">
+<h1>Forgetting what <br> you Learned</h1>
+<p>Knowledge fadea becaous there 's <br>no system to retain it</p>
+
+</div>
+</div>
+</section>
+
+
+<section class="brain">
+
+<div class="knowledge">
+<img src="./assets/knowledge.png" alt="">
+</div>
+<div class="solution">
+<p>The solution</p>
+<h1>Your Second Brain,<br>
+
+Strucktered By design
+</h1>
+<p>
+Personal  knowledge Vault Is'T another note-taking <br>
+Z It's a thinking where every note link and summary <br>
+becomes part of an interconnected web of understanding.
+
+</p>
+<ul>
+<li>  <img src="./assets/CheckCircle.png" alt="">Captaures ideas with structers  built-in from day one</li>
+<li ><img src="./assets/CheckCircle.png" alt="">Connect related concept automatically as you write</li>
+<li><img src="./assets/CheckCircle.png" alt="">Build lasting knowledge through reflection promts</li>
+<li><img src="./assets/CheckCircle.png" alt="">find anything instantly with semantics</li>
+
+
+</ul>
+</div>
+
+
+
+
+</section>
+<section class="ready">
+
+<div class="more">
+<h1>Ready to think more clearly?</h1>
+<p>Join thousands of learner who are building their personel knowledge vault <br>Start free ,no creadit card recuaired</p>
+<button>Get Early Access <img src="./assets/ArrowRight.png" alt=""></button>
+<p>Free during early access . No creadit card needed</p>
+</div>
+
+</section>
+<footer class="footering">
+    <div class="end">
+
+        <img src="./assets/logo-footer.png" alt="" height="150px" width="150px">
+    </div>
+<div class="link">
+<h1>Social links</h1>
+<div class="foot">
+<img src="./linkedin.png" alt="" height="20px" width="20px">
+<img src="./letter-f.png" alt="" height="20px" width="20px">
+<img src="./twitter.png" alt="" height="20px" width="20px">
+
+</div>
+<p>&copy; 2026 Personal knowledge vault . All right Reserved</p>
+</footer>
+
+
 </body>
 </html>
