desined a second button

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 A private space to stores notes,likes, and learning summarise- designed to <br>
 help you think clearly ,connent ideas , and turn learning into long -term knowledge.
 </p>
-<button class="btn">Starting building your Vault</button>
-<button>See How it Works</button>
+<button class="see">Starting building your Vault <img src="./assets/ArrowRight.png" alt=""></button>
+<button class="ok">See How it Works </button>
 
 </section>
 <section>
